--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>AO Asociata Pentru Promovarea Antreprenoriatului</title>
+  <title>AO Asociatia Pentru Promovarea Antreprenoriatului</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">AO Asociata Pentru Promovarea Antreprenoriatului</h1>
+      <h1 class="mb-1">AO Asociatia Pentru Promovarea Antreprenoriatului</h1>
       <h3 class="mb-5">
         <em>Under construction...</em>
       </h3>
