--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#">Proiecte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacte</a>
+            <a class="nav-link" href="contact.html">Contacte</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Parteneri</a>
@@ -57,7 +57,7 @@
     <!-- Heading Row -->
     <div class="row align-items-center my-5">
       <div class="col-lg-7">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/handshake.jpg" alt="">
       </div>
       <!-- /.col-lg-8 -->
       <div class="col-lg-5">
@@ -73,11 +73,12 @@
     <!-- Call to Action Well -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+        <p class="text-white m-0"></p>
       </div>
     </div>
 
     <!-- Content Row -->
+    <!--
     <div class="row">
       <div class="col-md-4 mb-5">
         <div class="card h-100">
@@ -90,7 +91,9 @@
           </div>
         </div>
       </div>
+      -->
       <!-- /.col-md-4 -->
+      <!--
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
@@ -102,7 +105,9 @@
           </div>
         </div>
       </div>
+    -->
       <!-- /.col-md-4 -->
+      <!--
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
@@ -114,6 +119,7 @@
           </div>
         </div>
       </div>
+    -->
       <!-- /.col-md-4 -->
 
     </div>
