--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
       <!-- Map Column -->
       <div class="col-lg-8 mb-4">
         <!-- Embedded Google Map -->
-        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/#map=13/47.0359/28.8074"></iframe>
+        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18297.33242293677!2d28.82889317300996!3d47.02227859738012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3496c35df5%3A0x898b2f5606a84b31!2sStefan+cel+Mare+si+Sfant+Boulevard%2C+Chisinau%2C+Moldova!5e0!3m2!1sen!2s!4v1554742224593!5m2!1sen!2s"></iframe>
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
