--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Acasă</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Despre noi</a>
+            <a class="nav-link" href="about.html">Despre noi</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Proiecte</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacte
+          <li class="nav-item ">
+            <a class="nav-link active" href="contact.html">Contacte
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -78,19 +78,19 @@
         <h3>Date de contat</h3>
         <p>
           Moldova
-          <br>Chișinău
-          <br>
+          <br><abbr title="Adresa juridică">Adresa juridică</abbr>: or. Leova, str. Independenței,23 ap. 28
+          <br><abbr title="Adresa oficiului">Adresa oficiului</abbr>: Mun. Chișinău, str. Pușkin 22, of.215
         </p>
         <p>
-          <abbr title="Telefon">P</abbr>: +373 
+          <abbr title="Telefon">Telefon</abbr>: +373 69 699 300
         </p>
         <p>
-          <abbr title="Email">E</abbr>:
+          <abbr title="Email">Email</abbr>:
           <a href="mailto:apantreprenor@gmail.com">apantreprenor@gmail.com
           </a>
         </p>
         <p>
-          <abbr title="Orele de lucru">H</abbr>: Luni - Vineri: 9:00  - 18:00
+          <abbr title="Orele de lucru">Orele de lucru</abbr>: Luni - Vineri: 9:00  - 18:00
         </p>
       </div>
     </div>
@@ -99,7 +99,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; appa.md 2019</p>
     </div>
     <!-- /.container -->
   </footer>
