--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Despre noi</a>
+            <a class="nav-link" href="about.html">Despre noi</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Proiecte</a>
@@ -131,7 +131,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; appa.md 2019</p>
     </div>
     <!-- /.container -->
   </footer>
