--- a/parteneri.html
+++ b/parteneri.html
@@ -40,12 +40,12 @@
             <a class="nav-link" href="#">Proiecte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacte
-              <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="contact.html">Contacte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="parteneri.html">Parteneri</a>
+            <a class="nav-link" href="parteneri.html">Parteneri
+              <span class="sr-only">(current)</span>
+            </a>
           </li>
         </ul>
       </div>
@@ -56,7 +56,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Contacte
+    <h1 class="mt-4 mb-3">Parteneri
       <small></small>
     </h1>
 
@@ -64,38 +64,17 @@
       <li class="breadcrumb-item">
         <a href="index.html">Acasă</a>
       </li>
-      <li class="breadcrumb-item active">Contacte</li>
+      <li class="breadcrumb-item active">Parteneri</li>
     </ol>
 
     <!-- Content Row -->
     <div class="row">
       <!-- Map Column -->
-      <div class="col-lg-8 mb-4">
-        <!-- Embedded Google Map -->
-        <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18297.33242293677!2d28.82889317300996!3d47.02227859738012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3496c35df5%3A0x898b2f5606a84b31!2sStefan+cel+Mare+si+Sfant+Boulevard%2C+Chisinau%2C+Moldova!5e0!3m2!1sen!2s!4v1554742224593!5m2!1sen!2s"></iframe>
-      </div>
-      <!-- Contact Details Column -->
-      <div class="col-lg-4 mb-4">
-        <h3>Date de contat</h3>
-        <p>
-          Moldova
-          <br><abbr title="Adresa juridică">Adresa juridică</abbr>: or. Leova, str. Independenței,23 ap. 28
-          <br><abbr title="Adresa oficiului">Adresa oficiului</abbr>: Mun. Chișinău, str. Pușkin 22, of.215
-        </p>
-        <p>
-          <abbr title="Telefon">Telefon</abbr>: +373 60 821 188
-        </p>
-        <p>
-          <abbr title="Email">Email</abbr>:
-          <a href="mailto:apantreprenor@gmail.com">apantreprenor@gmail.com
-          </a>
-        </p>
-        <p>
-          <abbr title="Orele de lucru">Orele de lucru</abbr>: Luni - Vineri: 9:00  - 18:00
-        </p>
+      <div class="col">
+        <!-- Pdf File -->
+        <embed src= "assets/Comunicat semnarea contractului cu sponsor logo si APPA_IB.pdf" width="100%" height="800px">
       </div>
     </div>
-    <!-- /.row -->
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
