--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="nav-link" href="contact.html">Contacte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Parteneri</a>
+            <a class="nav-link" href="parteneri.html">Parteneri</a>
           </li>
         </ul>
       </div>
@@ -131,7 +131,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; appa.md 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; appa.md</p>
     </div>
     <!-- /.container -->
   </footer>
