--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <meta name="author" content="Chițanu Victoria">
   <meta itemprop="name" content="appa.md: Asociația Pentru Promovarea Antreprenoriatului">
   <title>AO Asociația Pentru Promovarea Antreprenoriatului</title>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+    m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(57683557, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,7 +43,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Asociația Pentru Promovarea Antreprenoriatului</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -91,8 +112,8 @@
         </div>
       </div>
       -->
-      <!-- /.col-md-4 -->
-      <!--
+    <!-- /.col-md-4 -->
+    <!--
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
@@ -105,8 +126,8 @@
         </div>
       </div>
     -->
-      <!-- /.col-md-4 -->
-      <!--
+    <!-- /.col-md-4 -->
+    <!--
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
@@ -119,10 +140,10 @@
         </div>
       </div>
     -->
-      <!-- /.col-md-4 -->
+    <!-- /.col-md-4 -->
 
-    </div>
-    <!-- /.row -->
+  </div>
+  <!-- /.row -->
 
   </div>
   <!-- /.container -->
@@ -140,20 +161,5 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-  ym(57683557, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 
 </html>
