Append yandex form

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
       m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "http://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(57683557, "init", {
       clickmap: true,
@@ -27,7 +27,7 @@
     });
   </script>
   <noscript>
-    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="http://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
   <!-- Bootstrap core CSS -->
@@ -89,6 +89,21 @@
     </ol>
 
     <!-- Intro Content -->
+    <div class="row">
+      <div class="col-lg-5">
+        <h1 class="font-weight-light">AO Asociația Pentru Promovarea Antreprenoriatului</h1>
+        <p>Asociația Obșteasca „Asociația pentru promovarea Antreprenoriatului” (APA) a fost înregistrata
+          la Ministerul de Justiție cu nr. 458 la data 19 decembrie 2014, sediul Asociatei se afla pe
+          adresa: Republica Moldova, or. Leova, str. Independenței, nr. 23, of. 28. Oficiul actual în orașul
+          Chișinău, str. Pușkin 22, of. 215. Entitatea își desfășoară activitatea pe tot teritoriul Republicii
+          Moldova.</p>
+      </div>
+      <div class="col-lg-7">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/handshake.jpg" alt="">
+      </div>
+    </div>
+    <div class="text-white my-4 py-4 text-center">
+    </div>
     <div class="row">
       <div class="col-lg-6">
         <img class="img-fluid rounded mb-4" src="img/aboutus.jpg" alt="">
