--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
-    m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
       m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "http://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(57683557, "init", {
       clickmap: true,
@@ -26,7 +26,7 @@
     });
   </script>
   <noscript>
-    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="http://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
   <!-- Bootstrap core CSS -->
@@ -73,20 +73,38 @@
 
   <!-- Page Content -->
   <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <h1 class="mt-4 font-weight-light">Formular de înregistrare la sesiunile de instruire antreprenorială, realizate
+          în cadrul
+          proiectului</h1>
+        <h2 class="font-weight-light"><b>"Activități și metode educaționale inovative pentru tinerii din regiuni"</b>
+        </h2>
+        <!-- Author -->
+        <p class="lead">
+          Implementat de AO Asociația pentru Promovarea Antreprenorialului (APA) cu suportul Proiectului USAID
+          Agricultura
+          Performantă în Moldova (USAID/APM).
+        </p>
+        <p>
+          Scopul proiectului constă în dezvoltarea spiritului antreprenorial al tinerilor și încurajarea inițierii
+          întreprinderilor în zonele rurale prin facilitarea accesului la resurse financiare, instruire, consultanță și
+          mentorat
+          în gestiunea și extinderea afacerilor agricole.
+          Grupul țintă îl reprezintă tinerii până la 35 ani, care intenționează să inițieze sau gestionează afaceri în
+          domeniul
+          agricol în special în horticultură (legumicultură și pomicultură), pomușoare, etc.
+          Întrebările marcate cu * sunt OBLIGATORII!
+        </p>
+        <hr>
 
-    <!-- Heading Row -->
-    <div class="row align-items-center my-5">
-      <div class="col-lg-7">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="img/handshake.jpg" alt="">
+        <script src="http://yastatic.net/q/forms-frontend-ext/_/embed.js"></script>
+        <iframe src="http://forms.yandex.ru/u/5e54137ddc4eab06d1487a74/?iframe=1" frameborder="0"
+          name="ya-form-5e54137ddc4eab06d1487a74" width="650"></iframe>
       </div>
-      <!-- /.col-lg-8 -->
-      <div class="col-lg-5">
-        <h1 class="font-weight-light">AO Asociația Pentru Promovarea Antreprenoriatului</h1>
-        <p>Asociația Obșteasca „Asociația pentru promovarea Antreprenoriatului” (APA) a fost înregistrata
-          la Ministerul de Justiție cu nr. 458 la data 19 decembrie 2014, sediul Asociatei se afla pe
-          adresa: Republica Moldova, or. Leova, str. Independenței, nr. 23, of. 28. Oficiul actual în orașul
-          Chișinău, str. Pușkin 22, of. 215. Entitatea își desfășoară activitatea pe tot teritoriul Republicii
-          Moldova.</p>
+      <div class="col-lg-4">
+        <img class="img-fluid rounded" src="img/appa_fullname_right.png" alt="">
+        <img class="img-fluid rounded" src="img/usaid.png" alt="">
       </div>
     </div>
 
@@ -96,58 +114,7 @@
         <p class="text-white m-0"></p>
       </div>
     </div>
-
-    <!-- Content Row -->
-    <!--
-    <div class="row">
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Card One</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
-          </div>
-        </div>
-      </div>
-      -->
-    <!-- /.col-md-4 -->
-    <!--
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Card Two</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
-          </div>
-        </div>
-      </div>
-    -->
-    <!-- /.col-md-4 -->
-    <!--
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Card Three</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
-          </div>
-        </div>
-      </div>
-    -->
-    <!-- /.col-md-4 -->
-
   </div>
-  <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
