--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
       m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "http://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(57683557, "init", {
       clickmap: true,
@@ -27,7 +27,7 @@
     });
   </script>
   <noscript>
-    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="http://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
   <!-- Bootstrap core CSS -->
@@ -94,7 +94,7 @@
       <div class="col-lg-8 mb-4">
         <!-- Embedded Google Map -->
         <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18297.33242293677!2d28.82889317300996!3d47.02227859738012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3496c35df5%3A0x898b2f5606a84b31!2sStefan+cel+Mare+si+Sfant+Boulevard%2C+Chisinau%2C+Moldova!5e0!3m2!1sen!2s!4v1554742224593!5m2!1sen!2s"></iframe>
+          src="http://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18297.33242293677!2d28.82889317300996!3d47.02227859738012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97c3496c35df5%3A0x898b2f5606a84b31!2sStefan+cel+Mare+si+Sfant+Boulevard%2C+Chisinau%2C+Moldova!5e0!3m2!1sen!2s!4v1554742224593!5m2!1sen!2s"></iframe>
       </div>
       <!-- Contact Details Column -->
       <div class="col-lg-4 mb-4">
@@ -105,7 +105,7 @@
           <br><abbr title="Adresa oficiului">Adresa oficiului</abbr>: Mun. Chișinău, str. Pușkin 22, of.215
         </p>
         <p>
-          <abbr title="Telefon">Telefon</abbr>: +373 60 821 188
+          <abbr title="Telefon">Telefon</abbr>: +37360821188
         </p>
         <p>
           <abbr title="Email">Email</abbr>:
