--- a/parteneri.html
+++ b/parteneri.html
@@ -17,7 +17,7 @@
     m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
       m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "http://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(57683557, "init", {
       clickmap: true,
@@ -27,7 +27,7 @@
     });
   </script>
   <noscript>
-    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="http://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
   <!-- Bootstrap core CSS -->
