Changed blank text

--- a/index.html
+++ b/index.html
@@ -86,27 +86,26 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
-        <h1 class="mt-4 font-weight-light">Formular de înregistrare la sesiunile de instruire antreprenorială, realizate
-          în cadrul
-          proiectului</h1>
-        <h2 class="font-weight-light"><b>"Activități și metode educaționale inovative pentru tinerii din regiuni"</b>
-        </h2>
-        <!-- Author -->
+        <h1 class="mt-4 font-weight-light">Formular de înregistrare la sesiunile de instruire antreprenorială, realizate în cadrul proiectului</h1>
+        <h2 class="font-weight-light"><b>"Activități și metode educaționale inovative pentru tinerii din regiuni"</b></h2>
         <p class="lead">
-          Implementat de AO Asociația pentru Promovarea Antreprenorialului (APA) cu suportul Proiectului USAID
-          Agricultura
-          Performantă în Moldova (USAID/APM).
+          implementat de AO Asociația pentru Promovarea Antreprenorialului (APA) cu suportul Proiectului USAID Agricultura
+          Performantă în Moldova (USAID/APM)
         </p>
-        <p>
-          Scopul proiectului constă în dezvoltarea spiritului antreprenorial al tinerilor și încurajarea inițierii
-          întreprinderilor în zonele rurale prin facilitarea accesului la resurse financiare, instruire, consultanță și
-          mentorat
-          în gestiunea și extinderea afacerilor agricole.
-          Grupul țintă îl reprezintă tinerii până la 35 ani, care intenționează să inițieze sau gestionează afaceri în
-          domeniul
-          agricol în special în horticultură (legumicultură și pomicultură), pomușoare, etc.
-          Întrebările marcate cu * sunt OBLIGATORII!
-        </p>
+        <p><b>Scopul proiectului: </b></p>
+        <p>• să oferim asistență tinerilor din zonele rurale în dezvoltarea abilităților antreprenoriale pentru a lansa o
+          afacere în domeniul agricol sau pentru a îmbunătăți administrarea afacerii existente.</p>
+        <p><b>În ce constă asistența: </b></p>
+        <p>• organizarea în perioada aprilie-iulie 2020 a instruirilor despre crearea, gestionarea și finanțarea unei afaceri
+          agricole, aspecte tehnologice și de marketing etc.;</p>
+        <p>• desfășurarea în perioada august-septembrie 2020 a instruirilor profesionale în domeniul agricol;</p>
+        <p>• program de mentorat.</p>
+        <p><b>Acest proiect este pentru tine dacă:</b> </p>
+        <p>• ai 16-35 de ani;</p>
+        <p>• gestionezi o afacere în legumicultură, pomicultură, pomușoare, producerea strugurilor de masă; </p>
+        <p>• intenționezi să lansezi o afacere în domeniul agricol.</p>
+        <p>Întrebările marcate cu * sunt OBLIGATORII!</p>
+
         <hr>
 
         <script src="http://yastatic.net/q/forms-frontend-ext/_/embed.js"></script>
