--- a/about.html
+++ b/about.html
@@ -229,20 +229,20 @@
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">victoria_bejenaru@mail.ru</a>
+            <a href="mailto:victoria_bejenaru@mail.ru">victoria_bejenaru@mail.ru</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="img/georgeta.jpg" alt="">
+          <img class="card-img-top" src="img/georgeta.jpg">
           <div class="card-body">
             <h4 class="card-title">Melnic Georgeta</h4>
             <h6 class="card-subtitle mb-2 text-muted">președinte, contabil șef</h6>
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <a href="#">melnicgeorgeta@mail.ru</a>
+            <a href="mailto:melnicgeorgeta@mail.ru">melnicgeorgeta@mail.ru</a>
           </div>
         </div>
       </div>
