--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
   <!-- Page Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8">
+      <!-- <div class="col-lg-8"> -->
+      <div class="col">
+        <img class="img-fluid rounded" src="img/usaid.png" style="width: 400px; height: 70px;">
+        <img class="img-fluid rounded" src="img/appa_fullname_right.png" style="width: 290px; height: 70px; margin-left: 30px;">
         <h1 class="mt-4 font-weight-light">Formular de înregistrare la sesiunile de instruire antreprenorială, realizate în cadrul proiectului</h1>
         <h2 class="font-weight-light"><b>"Activități și metode educaționale inovative pentru tinerii din regiuni"</b></h2>
         <p class="lead">
@@ -112,10 +115,9 @@
         <iframe src="http://forms.yandex.ru/u/5e54137ddc4eab06d1487a74/?iframe=1" frameborder="0"
           name="ya-form-5e54137ddc4eab06d1487a74" width="650"></iframe>
       </div>
-      <div class="col-lg-4">
-        <img class="img-fluid rounded" src="img/appa_fullname_right.png" alt="">
-        <img class="img-fluid rounded" src="img/usaid.png" alt="">
-      </div>
+      <!-- <div class="col-lg-4">
+        
+      </div> -->
     </div>
 
     <!-- Call to Action Well -->
