--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
       m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
     })
-      (window, document, "script", "http://mc.yandex.ru/metrika/tag.js", "ym");
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(57683557, "init", {
       clickmap: true,
@@ -26,7 +26,7 @@
     });
   </script>
   <noscript>
-    <div><img src="http://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
+    <div><img src="https://mc.yandex.ru/watch/57683557" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
 
@@ -111,8 +111,8 @@
 
         <hr>
 
-        <script src="http://yastatic.net/q/forms-frontend-ext/_/embed.js"></script>
-        <iframe src="http://forms.yandex.ru/u/5e54137ddc4eab06d1487a74/?iframe=1" frameborder="0"
+        <script src="https://yastatic.net/q/forms-frontend-ext/_/embed.js"></script>
+        <iframe src="https://forms.yandex.ru/u/5e54137ddc4eab06d1487a74/?iframe=1" frameborder="0"
           name="ya-form-5e54137ddc4eab06d1487a74" width="650"></iframe>
       </div>
       <!-- <div class="col-lg-4">
